--- a/config/development/properties.yaml
+++ b/config/development/properties.yaml
@@ -1,7 +1,6 @@
 ---
-path: /auth
-secretKey: test-key
+path: /products
 database:
     uri: mongodb://localhost:27017
     db: ecommerce
-    collection: auth
+    collection: products
